# recommendation-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
data/: app.db
data/sample/: create_sample.py
data/sample/ml-100k/: u.data  u.item
src/: main.py
src/api/: app.py  cache.py  dependencies.py  schemas.py
src/api/routes/: ab_test.py  rate.py  recommend.py  similar.py
src/dashboard/: __init__.py  app.py
src/data/: downloader.py  preprocessor.py  splitter.py
src/models/: ab_test.py  cold_start.py  collaborative.py  content_based.py  evaluator.py  hybrid.py
src/utils/: config.py  database.py  logger.py
tests/: conftest.py  test_ab_test.py  test_api.py  test_cache.py  test_cold_start.py  test_collaborative.py  test_config.py  test_content_based.py  test_dashboard.py  test_data_pipeline.py  test_database.py  test_evaluator.py  test_features.py  test_hybrid.py  test_logger.py  test_splitter.py
